--- a/deployment/docker-compose-manifests/docker-compose-with-jaeger.yml
+++ b/deployment/docker-compose-manifests/docker-compose-with-jaeger.yml
@@ -33,8 +33,7 @@ services:
       - my-network
 
   ts-ui-dashboard:
-    build: ts-ui-dashboard
-    image: codewisdom/ts-ui-dashboard:0.0.4
+    image: codewisdom/ts-ui-dashboard-with-jaeger:v1
     restart: always
     ports:
       - 8080:8080
@@ -42,8 +41,7 @@ services:
       - my-network
 
   ts-auth-service:
-    build: ts-auth-service
-    image: codewisdom/ts-auth-service:0.0.4
+    image: codewisdom/ts-auth-service-with-jaeger:v1
     restart: always
     ports:
       - 12340:12340
@@ -56,8 +54,7 @@ services:
       - my-network
 
   ts-user-service:
-    build: ts-user-service
-    image: codewisdom/ts-user-service:0.0.4
+    image: codewisdom/ts-user-service-with-jaeger:v1
     restart: always
     ports:
       - 12342:12342
@@ -70,8 +67,7 @@ services:
       - my-network
 
   ts-verification-code-service:
-    build: ts-verification-code-service
-    image: codewisdom/ts-verification-code-service:0.0.4
+    image: codewisdom/ts-verification-code-service-with-jaeger:v1
     restart: always
     ports:
       - 15678:15678
@@ -85,8 +81,7 @@ services:
       - my-network
 
   ts-route-service:
-    build: ts-route-service
-    image: codewisdom/ts-route-service:0.0.4
+    image: codewisdom/ts-route-service-with-jaeger:v1
     restart: always
     ports:
          - 11178:11178
@@ -99,8 +94,7 @@ services:
         - my-network
 
   ts-contacts-service:
-    build: ts-contacts-service
-    image: codewisdom/ts-contacts-service:0.0.4
+    image: codewisdom/ts-contacts-service-with-jaeger:v1
     restart: always
     ports:
       - 12347:12347
@@ -113,8 +107,7 @@ services:
         - my-network
 
   ts-order-service:
-    build: ts-order-service
-    image: codewisdom/ts-order-service:0.0.4
+    image: codewisdom/ts-order-service-with-jaeger:v1
     restart: always
     ports:
       - 12031:12031
@@ -128,8 +121,7 @@ services:
 
 
   ts-order-other-service:
-    build: ts-order-other-service
-    image: codewisdom/ts-order-other-service:0.0.4
+    image: codewisdom/ts-order-other-service-with-jaeger:v1
     restart: always
     ports:
       - 12032:12032
@@ -143,8 +135,7 @@ services:
 
 
   ts-config-service:
-    build: ts-config-service
-    image: codewisdom/ts-config-service:0.0.4
+    image: codewisdom/ts-config-service-with-jaeger:v1
     restart: always
     ports:
       - 15679:15679
@@ -157,8 +148,7 @@ services:
       - my-network
 
   ts-station-service:
-    build: ts-station-service
-    image: codewisdom/ts-station-service:0.0.4
+    image: codewisdom/ts-station-service-with-jaeger:v1
     restart: always
     ports:
       - 12345:12345
@@ -171,8 +161,7 @@ services:
       - my-network
 
   ts-train-service:
-    build: ts-train-service
-    image: codewisdom/ts-train-service:0.0.4
+    image: codewisdom/ts-train-service-with-jaeger:v1
     restart: always
     ports:
       - 14567:14567
@@ -185,8 +174,7 @@ services:
       - my-network
 
   ts-travel-service:
-    build: ts-travel-service
-    image: codewisdom/ts-travel-service:0.0.4
+    image: codewisdom/ts-travel-service-with-jaeger:v1
     restart: always
     ports:
       - 12346:12346
@@ -199,8 +187,7 @@ services:
       - my-network
 
   ts-travel2-service:
-      build: ts-travel2-service
-      image: codewisdom/ts-travel2-service:0.0.4
+      image: codewisdom/ts-travel2-service-with-jaeger:v1
       restart: always
       ports:
         - 16346:16346
@@ -213,8 +200,7 @@ services:
         - my-network
 
   ts-preserve-service:
-    build: ts-preserve-service
-    image: codewisdom/ts-preserve-service:0.0.4
+    image: codewisdom/ts-preserve-service-with-jaeger:v1
     restart: always
     ports:
       - 14568:14568
@@ -222,8 +208,7 @@ services:
       - my-network
 
   ts-preserve-other-service:
-    build: ts-preserve-other-service
-    image: codewisdom/ts-preserve-other-service:0.0.4
+    image: codewisdom/ts-preserve-other-service-with-jaeger:v1
     restart: always
     ports:
       - 14569:14569
@@ -232,8 +217,7 @@ services:
 
 
   ts-basic-service:
-      build: ts-basic-service
-      image: codewisdom/ts-basic-service:0.0.4
+      image: codewisdom/ts-basic-service-with-jaeger:v1
       restart: always
       ports:
         - 15680:15680
@@ -241,8 +225,7 @@ services:
           - my-network
 
   ts-ticketinfo-service:
-        build: ts-ticketinfo-service
-        image: codewisdom/ts-ticketinfo-service:0.0.4
+        image: codewisdom/ts-ticketinfo-service-with-jaeger:v1
         restart: always
         ports:
           - 15681:15681
@@ -250,8 +233,7 @@ services:
           - my-network
 
   ts-price-service:
-        build: ts-price-service
-        image: codewisdom/ts-price-service:0.0.4
+        image: codewisdom/ts-price-service-with-jaeger:v1
         restart: always
         ports:
           - 16579:16579
@@ -264,8 +246,7 @@ services:
           - my-network
 
   ts-notification-service:
-        build: ts-notification-service
-        image: codewisdom/ts-notification-service:0.0.4
+        image: codewisdom/ts-notification-service-with-jaeger:v1
         restart: always
         ports:
           - 17853:17853
@@ -273,8 +254,7 @@ services:
           - my-network
 
   ts-security-service:
-        build: ts-security-service
-        image: codewisdom/ts-security-service:0.0.4
+        image: codewisdom/ts-security-service-with-jaeger:v1
         restart: always
         ports:
           - 11188:11188
@@ -287,8 +267,7 @@ services:
           - my-network
 
   ts-inside-payment-service:
-        build: ts-inside-payment-service
-        image: codewisdom/ts-inside-payment-service:0.0.4
+        image: codewisdom/ts-inside-payment-service-with-jaeger:v1
         restart: always
         ports:
           - 18673:18673
@@ -301,8 +280,7 @@ services:
           - my-network
 
   ts-execute-service:
-        build: ts-execute-service
-        image: codewisdom/ts-execute-service:0.0.4
+        image: codewisdom/ts-execute-service-with-jaeger:v1
         restart: always
         ports:
           - 12386:12386
@@ -310,8 +288,7 @@ services:
           - my-network
 
   ts-payment-service:
-        build: ts-payment-service
-        image: codewisdom/ts-payment-service:0.0.4
+        image: codewisdom/ts-payment-service-with-jaeger:v1
         restart: always
         ports:
           - 19001:19001
@@ -324,8 +301,7 @@ services:
           - my-network
 
   ts-rebook-service:
-        build: ts-rebook-service
-        image: codewisdom/ts-rebook-service:0.0.4
+        image: codewisdom/ts-rebook-service-with-jaeger:v1
         restart: always
         ports:
           - 18886:18886
@@ -338,8 +314,7 @@ services:
           - my-network
 
   ts-cancel-service:
-        build: ts-cancel-service
-        image: codewisdom/ts-cancel-service:0.0.4
+        image: codewisdom/ts-cancel-service-with-jaeger:v1
         restart: always
         ports:
           - 18885:18885
@@ -347,8 +322,7 @@ services:
           - my-network
 
   ts-assurance-service:
-        build: ts-assurance-service
-        image: codewisdom/ts-assurance-service:0.0.4
+        image: codewisdom/ts-assurance-service-with-jaeger:v1
         restart: always
         ports:
           - 18888:18888
@@ -361,8 +335,7 @@ services:
           - my-network
 
   ts-seat-service:
-        build: ts-seat-service
-        image: codewisdom/ts-seat-service:0.0.4
+        image: codewisdom/ts-seat-service-with-jaeger:v1
         restart: always
         ports:
           - 18898:18898
@@ -370,8 +343,7 @@ services:
           - my-network
 
   ts-travel-plan-service:
-        build: ts-travel-plan-service
-        image: codewisdom/ts-travel-plan-service:0.0.4
+        image: codewisdom/ts-travel-plan-service-with-jaeger:v1
         restart: always
         ports:
           - 14322:14322
@@ -379,8 +351,7 @@ services:
           - my-network
 
   ts-ticket-office-service:
-        build: ts-ticket-office-service
-        image: codewisdom/ts-ticket-office-service:0.0.4
+        image: codewisdom/ts-ticket-office-service-with-jaeger:v1
         restart: always
         ports:
           - 16108:16108
@@ -393,8 +364,7 @@ services:
             - my-network
 
   ts-news-service:
-    build: ts-news-service
-    image: codewisdom/ts-news-service:0.0.4
+    image: codewisdom/ts-news-service-with-jaeger:v1
     restart: always
     ports:
       - 12862:12862
@@ -416,8 +386,7 @@ services:
            - my-network
 
   ts-voucher-service:
-          build: ts-voucher-service
-          image: codewisdom/ts-voucher-service:0.0.4
+          image: codewisdom/ts-voucher-service-with-jaeger:v1
           restart: always
           ports:
             - 16101:16101
@@ -429,8 +398,7 @@ services:
             - my-network
 
   ts-food-map-service:
-        build: ts-food-map-service
-        image: codewisdom/ts-food-map-service:0.0.4
+        image: codewisdom/ts-food-map-service-with-jaeger:v1
         restart: always
         ports:
           - 18855:18855
@@ -443,8 +411,7 @@ services:
             - my-network
 
   ts-route-plan-service:
-          build: ts-route-plan-service
-          image: codewisdom/ts-route-plan-service:0.0.4
+          image: codewisdom/ts-route-plan-service-with-jaeger:v1
           restart: always
           ports:
             - 14578:14578
@@ -452,8 +419,7 @@ services:
             - my-network
 
   ts-food-service:
-      build: ts-food-service
-      image: codewisdom/ts-food-service:0.0.4
+      image: codewisdom/ts-food-service-with-jaeger:v1
       restart: always
       ports:
         - 18856:18856
@@ -461,8 +427,7 @@ services:
         - my-network
 
   ts-consign-service:
-            build: ts-consign-service
-            image: codewisdom/ts-consign-service:0.0.4
+            image: codewisdom/ts-consign-service-with-jaeger:v1
             restart: always
             ports:
               - 16111:16111
@@ -475,8 +440,7 @@ services:
               - my-network
 
   ts-consign-price-service:
-            build: ts-consign-price-service
-            image: codewisdom/ts-consign-price-service:0.0.4
+            image: codewisdom/ts-consign-price-service-with-jaeger:v1
             restart: always
             ports:
               - 16110:16110
@@ -494,8 +458,7 @@ services:
               - my-network
 
   ts-admin-basic-info-service:
-        build: ts-admin-basic-info-service
-        image: codewisdom/ts-admin-basic-info-service:0.0.4
+        image: codewisdom/ts-admin-basic-info-service-with-jaeger:v1
         restart: always
         ports:
           - 18767:18767
@@ -503,8 +466,7 @@ services:
           - my-network
 
   ts-admin-order-service:
-            build: ts-admin-order-service
-            image: codewisdom/ts-admin-order-service:0.0.4
+            image: codewisdom/ts-admin-order-service-with-jaeger:v1
             restart: always
             ports:
               - 16112:16112
@@ -512,8 +474,7 @@ services:
               - my-network
 
   ts-admin-route-service:
-              build: ts-admin-route-service
-              image: codewisdom/ts-admin-route-service:0.0.4
+              image: codewisdom/ts-admin-route-service-with-jaeger:v1
               restart: always
               ports:
                 - 16113:16113
@@ -525,8 +486,7 @@ services:
                 - my-network
 
   ts-admin-travel-service:
-                build: ts-admin-travel-service
-                image: codewisdom/ts-admin-travel-service:0.0.4
+                image: codewisdom/ts-admin-travel-service-with-jaeger:v1
                 restart: always
                 ports:
                   - 16114:16114
@@ -538,8 +498,7 @@ services:
                   - my-network
 
   ts-admin-user-service:
-    build: ts-admin-user-service
-    image: codewisdom/ts-admin-user-service:0.0.4
+    image: codewisdom/ts-admin-user-service-with-jaeger:v1
     restart: always
     ports:
       - 16115:16115
