--- a/deployment/kubernetes-manifests/k8s-with-jaeger/ts-deployment-part1.yml
+++ b/deployment/kubernetes-manifests/k8s-with-jaeger/ts-deployment-part1.yml
@@ -13,15 +13,15 @@ spec:
         app: ts-user-mongo
     spec:
       containers:
-      - name: ts-user-mongo
-        image: mongo
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: 27017
-        resources:
-          requests:
-            cpu: 50m
-            memory: 100Mi
+        - name: ts-user-mongo
+          image: mongo
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 27017
+          resources:
+            requests:
+              cpu: 50m
+              memory: 100Mi
 ---
 
 apiVersion: apps/v1
@@ -39,15 +39,15 @@ spec:
         app: ts-auth-mongo
     spec:
       containers:
-      - name: ts-auth-mongo
-        image: mongo
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: 27017
-        resources:
-          requests:
-            cpu: 50m
-            memory: 100Mi
+        - name: ts-auth-mongo
+          image: mongo
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 27017
+          resources:
+            requests:
+              cpu: 50m
+              memory: 100Mi
 ---
 
 apiVersion: apps/v1
@@ -65,15 +65,15 @@ spec:
         app: ts-route-mongo
     spec:
       containers:
-      - name: ts-route-mongo
-        image: mongo
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: 27017
-        resources:
-          requests:
-            cpu: 50m
-            memory: 100Mi
+        - name: ts-route-mongo
+          image: mongo
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 27017
+          resources:
+            requests:
+              cpu: 50m
+              memory: 100Mi
 
 ---
 
@@ -92,15 +92,15 @@ spec:
         app: ts-contacts-mongo
     spec:
       containers:
-      - name: ts-contacts-mongo
-        image: mongo
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: 27017
-        resources:
-          requests:
-            cpu: 50m
-            memory: 100Mi
+        - name: ts-contacts-mongo
+          image: mongo
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 27017
+          resources:
+            requests:
+              cpu: 50m
+              memory: 100Mi
 
 ---
 
@@ -119,15 +119,15 @@ spec:
         app: ts-order-mongo
     spec:
       containers:
-      - name: ts-order-mongo
-        image: mongo
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: 27017
-        resources:
-          requests:
-            cpu: 50m
-            memory: 100Mi
+        - name: ts-order-mongo
+          image: mongo
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 27017
+          resources:
+            requests:
+              cpu: 50m
+              memory: 100Mi
 
 ---
 
@@ -146,15 +146,15 @@ spec:
         app: ts-order-other-mongo
     spec:
       containers:
-      - name: ts-order-other-mongo
-        image: mongo
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: 27017
-        resources:
-          requests:
-            cpu: 50m
-            memory: 100Mi
+        - name: ts-order-other-mongo
+          image: mongo
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 27017
+          resources:
+            requests:
+              cpu: 50m
+              memory: 100Mi
 
 ---
 
@@ -173,15 +173,15 @@ spec:
         app: ts-config-mongo
     spec:
       containers:
-      - name: ts-config-mongo
-        image: mongo
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: 27017
-        resources:
-          requests:
-            cpu: 50m
-            memory: 100Mi
+        - name: ts-config-mongo
+          image: mongo
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 27017
+          resources:
+            requests:
+              cpu: 50m
+              memory: 100Mi
 
 ---
 
@@ -200,15 +200,15 @@ spec:
         app: ts-station-mongo
     spec:
       containers:
-      - name: ts-station-mongo
-        image: mongo
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: 27017
-        resources:
-          requests:
-            cpu: 50m
-            memory: 100Mi
+        - name: ts-station-mongo
+          image: mongo
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 27017
+          resources:
+            requests:
+              cpu: 50m
+              memory: 100Mi
 
 ---
 
@@ -227,15 +227,15 @@ spec:
         app: ts-train-mongo
     spec:
       containers:
-      - name: ts-train-mongo
-        image: mongo
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: 27017
-        resources:
-          requests:
-            cpu: 50m
-            memory: 100Mi
+        - name: ts-train-mongo
+          image: mongo
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 27017
+          resources:
+            requests:
+              cpu: 50m
+              memory: 100Mi
 
 ---
 
@@ -254,15 +254,15 @@ spec:
         app: ts-travel-mongo
     spec:
       containers:
-      - name: ts-travel-mongo
-        image: mongo
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: 27017
-        resources:
-          requests:
-            cpu: 50m
-            memory: 100Mi
+        - name: ts-travel-mongo
+          image: mongo
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 27017
+          resources:
+            requests:
+              cpu: 50m
+              memory: 100Mi
 
 ---
 
@@ -281,15 +281,15 @@ spec:
         app: ts-travel2-mongo
     spec:
       containers:
-      - name: ts-travel2-mongo
-        image: mongo
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: 27017
-        resources:
-          requests:
-            cpu: 50m
-            memory: 100Mi
+        - name: ts-travel2-mongo
+          image: mongo
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 27017
+          resources:
+            requests:
+              cpu: 50m
+              memory: 100Mi
 
 ---
 
@@ -308,15 +308,15 @@ spec:
         app: ts-price-mongo
     spec:
       containers:
-      - name: ts-price-mongo
-        image: mongo
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: 27017
-        resources:
-          requests:
-            cpu: 50m
-            memory: 100Mi
+        - name: ts-price-mongo
+          image: mongo
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 27017
+          resources:
+            requests:
+              cpu: 50m
+              memory: 100Mi
 
 ---
 
@@ -335,15 +335,15 @@ spec:
         app: ts-security-mongo
     spec:
       containers:
-      - name: ts-security-mongo
-        image: mongo
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: 27017
-        resources:
-          requests:
-            cpu: 50m
-            memory: 100Mi
+        - name: ts-security-mongo
+          image: mongo
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 27017
+          resources:
+            requests:
+              cpu: 50m
+              memory: 100Mi
 
 ---
 
@@ -362,15 +362,15 @@ spec:
         app: ts-inside-payment-mongo
     spec:
       containers:
-      - name: ts-inside-payment-mongo
-        image: mongo
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: 27017
-        resources:
-          requests:
-            cpu: 50m
-            memory: 100Mi
+        - name: ts-inside-payment-mongo
+          image: mongo
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 27017
+          resources:
+            requests:
+              cpu: 50m
+              memory: 100Mi
 
 ---
 
@@ -389,15 +389,15 @@ spec:
         app: ts-payment-mongo
     spec:
       containers:
-      - name: ts-payment-mongo
-        image: mongo
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: 27017
-        resources:
-          requests:
-            cpu: 50m
-            memory: 100Mi
+        - name: ts-payment-mongo
+          image: mongo
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 27017
+          resources:
+            requests:
+              cpu: 50m
+              memory: 100Mi
 
 ---
 
@@ -416,15 +416,15 @@ spec:
         app: ts-assurance-mongo
     spec:
       containers:
-      - name: ts-assurance-mongo
-        image: mongo
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: 27017
-        resources:
-          requests:
-            cpu: 50m
-            memory: 100Mi
+        - name: ts-assurance-mongo
+          image: mongo
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 27017
+          resources:
+            requests:
+              cpu: 50m
+              memory: 100Mi
 
 ---
 
@@ -443,15 +443,15 @@ spec:
         app: ts-ticket-office-mongo
     spec:
       containers:
-      - name: ts-ticket-office-mongo
-        image: mongo
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: 27017
-        resources:
-          requests:
-            cpu: 50m
-            memory: 100Mi
+        - name: ts-ticket-office-mongo
+          image: mongo
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 27017
+          resources:
+            requests:
+              cpu: 50m
+              memory: 100Mi
 
 
 ---
@@ -471,19 +471,19 @@ spec:
         app: ts-voucher-mysql
     spec:
       containers:
-      - name: ts-voucher-mysql
-        image: mysql:5.6.35
-        imagePullPolicy: IfNotPresent
-        env:
-        # Use secret in real usage
-        - name: MYSQL_ROOT_PASSWORD
-          value: root
-        ports:
-        - containerPort: 3306
-        resources:
-          requests:
-            cpu: 50m
-            memory: 100Mi
+        - name: ts-voucher-mysql
+          image: mysql:5.6.35
+          imagePullPolicy: IfNotPresent
+          env:
+            # Use secret in real usage
+            - name: MYSQL_ROOT_PASSWORD
+              value: root
+          ports:
+            - containerPort: 3306
+          resources:
+            requests:
+              cpu: 50m
+              memory: 100Mi
 
 ---
 
@@ -502,15 +502,15 @@ spec:
         app: ts-food-map-mongo
     spec:
       containers:
-      - name: ts-food-map-mongo
-        image: mongo
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: 27017
-        resources:
-          requests:
-            cpu: 50m
-            memory: 100Mi
+        - name: ts-food-map-mongo
+          image: mongo
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 27017
+          resources:
+            requests:
+              cpu: 50m
+              memory: 100Mi
 
 ---
 
@@ -529,15 +529,15 @@ spec:
         app: ts-consign-mongo
     spec:
       containers:
-      - name: ts-consign-mongo
-        image: mongo
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: 27017
-        resources:
-          requests:
-            cpu: 50m
-            memory: 100Mi
+        - name: ts-consign-mongo
+          image: mongo
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 27017
+          resources:
+            requests:
+              cpu: 50m
+              memory: 100Mi
 
 ---
 
@@ -556,15 +556,15 @@ spec:
         app: ts-consign-price-mongo
     spec:
       containers:
-      - name: ts-consign-price-mongo
-        image: mongo
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: 27017
-        resources:
-          requests:
-            cpu: 50m
-            memory: 100Mi
+        - name: ts-consign-price-mongo
+          image: mongo
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 27017
+          resources:
+            requests:
+              cpu: 50m
+              memory: 100Mi
 
 ---
 
@@ -583,26 +583,26 @@ spec:
         app: ts-food-mongo
     spec:
       containers:
-      - name: ts-food-mongo
-        image: mongo
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: 27017
-        resources:
-          requests:
-            cpu: 50m
-            memory: 100Mi
+        - name: ts-food-mongo
+          image: mongo
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 27017
+          resources:
+            requests:
+              cpu: 50m
+              memory: 100Mi
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: ts-user-mongo 
+  name: ts-user-mongo
 spec:
   ports:
     - port: 27017
   selector:
-   app: ts-user-mongo 
+    app: ts-user-mongo
 
 ---
 apiVersion: v1
@@ -613,7 +613,7 @@ spec:
   ports:
     - port: 27017
   selector:
-   app: ts-auth-mongo
+    app: ts-auth-mongo
 ---
 
 apiVersion: v1
@@ -624,7 +624,7 @@ spec:
   ports:
     - port: 27017
   selector:
-   app: ts-route-mongo
+    app: ts-route-mongo
 
 ---
 
@@ -636,7 +636,7 @@ spec:
   ports:
     - port: 27017
   selector:
-   app: ts-contacts-mongo
+    app: ts-contacts-mongo
 
 ---
 
@@ -648,7 +648,7 @@ spec:
   ports:
     - port: 27017
   selector:
-   app: ts-order-mongo
+    app: ts-order-mongo
 
 ---
 
@@ -660,7 +660,7 @@ spec:
   ports:
     - port: 27017
   selector:
-   app: ts-order-other-mongo
+    app: ts-order-other-mongo
 
 ---
 
@@ -672,7 +672,7 @@ spec:
   ports:
     - port: 27017
   selector:
-   app: ts-config-mongo
+    app: ts-config-mongo
 
 ---
 
@@ -684,7 +684,7 @@ spec:
   ports:
     - port: 27017
   selector:
-   app: ts-station-mongo
+    app: ts-station-mongo
 
 ---
 
@@ -696,7 +696,7 @@ spec:
   ports:
     - port: 27017
   selector:
-   app: ts-train-mongo
+    app: ts-train-mongo
 
 ---
 
@@ -708,7 +708,7 @@ spec:
   ports:
     - port: 27017
   selector:
-   app: ts-travel-mongo
+    app: ts-travel-mongo
 
 ---
 
@@ -720,7 +720,7 @@ spec:
   ports:
     - port: 27017
   selector:
-   app: ts-travel2-mongo
+    app: ts-travel2-mongo
 
 ---
 
@@ -732,7 +732,7 @@ spec:
   ports:
     - port: 27017
   selector:
-   app: ts-price-mongo
+    app: ts-price-mongo
 
 ---
 
@@ -744,7 +744,7 @@ spec:
   ports:
     - port: 27017
   selector:
-   app: ts-security-mongo
+    app: ts-security-mongo
 
 ---
 
@@ -756,7 +756,7 @@ spec:
   ports:
     - port: 27017
   selector:
-   app: ts-inside-payment-mongo
+    app: ts-inside-payment-mongo
 
 ---
 
@@ -768,7 +768,7 @@ spec:
   ports:
     - port: 27017
   selector:
-   app: ts-payment-mongo
+    app: ts-payment-mongo
 
 ---
 
@@ -780,7 +780,7 @@ spec:
   ports:
     - port: 27017
   selector:
-   app: ts-assurance-mongo
+    app: ts-assurance-mongo
 
 ---
 
@@ -792,7 +792,7 @@ spec:
   ports:
     - port: 27017
   selector:
-   app: ts-ticket-office-mongo
+    app: ts-ticket-office-mongo
 
 ---
 
@@ -804,7 +804,7 @@ spec:
   ports:
     - port: 3306
   selector:
-   app: ts-voucher-mysql
+    app: ts-voucher-mysql
 
 ---
 
@@ -816,7 +816,7 @@ spec:
   ports:
     - port: 27017
   selector:
-   app: ts-food-map-mongo
+    app: ts-food-map-mongo
 
 ---
 
@@ -828,7 +828,7 @@ spec:
   ports:
     - port: 27017
   selector:
-   app: ts-consign-mongo
+    app: ts-consign-mongo
 
 ---
 
@@ -840,7 +840,7 @@ spec:
   ports:
     - port: 27017
   selector:
-   app: ts-consign-price-mongo
+    app: ts-consign-price-mongo
 
 ---
 
@@ -852,7 +852,7 @@ spec:
   ports:
     - port: 27017
   selector:
-   app: ts-food-mongo
+    app: ts-food-mongo
 
 ---
 # Jaeger Deployment and Service.
@@ -883,30 +883,63 @@ spec:
         prometheus.io/port: "16686"
     spec:
       containers:
-      - env:
-        - name: COLLECTOR_ZIPKIN_HTTP_PORT
-          value: "9411"
-        image: jaegertracing/all-in-one
-        name: jaeger
-        ports:
-          - containerPort: 5775
-            protocol: UDP
-          - containerPort: 6831
-            protocol: UDP
-          - containerPort: 6832
-            protocol: UDP
-          - containerPort: 5778
-            protocol: TCP
-          - containerPort: 16686
-            protocol: TCP
-          - containerPort: 9411
-            protocol: TCP
-        readinessProbe:
-          httpGet:
-            path: "/"
-            port: 14269
-          initialDelaySeconds: 5
-
+        - env:
+            - name: COLLECTOR_ZIPKIN_HTTP_PORT
+              value: "9411"
+          image: jaegertracing/all-in-one:1.22.0
+          name: jaeger
+          ports:
+            - containerPort: 5775
+              protocol: UDP
+            - containerPort: 6831
+              protocol: UDP
+            - containerPort: 6832
+              protocol: UDP
+            - containerPort: 5778
+              protocol: TCP
+            - containerPort: 16686
+              protocol: TCP
+            - containerPort: 9411
+              protocol: TCP
+          readinessProbe:
+            httpGet:
+              path: "/"
+              port: 14269
+            initialDelaySeconds: 5
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: jaeger-agent
+spec:
+  selector:
+    matchLabels:
+      app: jaeger-agent
+  replicas: 1
+  strategy:
+    type: Recreate
+  template:
+    metadata:
+      labels:
+        app: jaeger-agent
+      name: jaeger-agent
+    spec:
+      containers:
+        - name: jaeger-agent
+          image: jaegertracing/jaeger-agent:1.30
+          ports:
+            - containerPort: 5775
+              protocol: UDP
+            - containerPort: 6831
+              protocol: UDP
+            - containerPort: 6832
+              protocol: UDP
+            - containerPort: 5778
+              protocol: TCP
+          args:
+            - --reporter.grpc.host-port=ingest.lightstep.com:443
+            - --reporter.type=grpc
+            - --reporter.grpc.tls.enabled=true
 ---
 
 apiVersion: v1
@@ -962,17 +995,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: jaeger
+  name: jaeger-agent-test
   labels:
-    app: jaeger
-    app.kubernetes.io/name: jaeger
-    app.kubernetes.io/component: agent
+    app: jaeger-agent-test
 spec:
   ports:
-    - name: agent-zipkin-thrift
-      port: 5775
-      protocol: UDP
-      targetPort: 5775
     - name: agent-compact
       port: 6831
       protocol: UDP
@@ -987,13 +1014,8 @@ spec:
       targetPort: 5778
   clusterIP: None
   selector:
-    app.kubernetes.io/name: jaeger
-    app.kubernetes.io/component: all-in-one
-  args:
-    - --reporter.grpc.host-port=jaeger-collector:14250
-    - --reporter.type=grpc
-    - --reporter.grpc.tls.enabled=true
-    - --jaeger.tags=access_token=Vc4iYtTykhCRBCrkM/+CS5S8HmtncU6yO4fM6q9Px2NOl6vm00vBxBKXVs0G1mIqc4IgDy6GM/rKnj2USFNlaYBFaYaewjLKB2/FFOcl
+    app: jaeger-agent
+
 ---
 
 apiVersion: v1
