Update kibana deployment scripts and add role binding creation script to README.md

--- a/deployment/kubernetes-manifests/efk-deployment/kibana-service.yaml
+++ b/deployment/kubernetes-manifests/efk-deployment/kibana-service.yaml
@@ -9,6 +9,7 @@ metadata:
     addonmanager.kubernetes.io/mode: Reconcile
     kubernetes.io/name: "Kibana"
 spec:
+  type: NodePort
   ports:
   - port: 5601
     protocol: TCP
