Upgrade project to Spring Boot 2.6.7 and update SeatServiceImpl with SperfAnno

--- a/ts-seat-service/src/main/resources/application.yml
+++ b/ts-seat-service/src/main/resources/application.yml
@@ -4,6 +4,13 @@ server:
 spring:
   application:
     name: ts-seat-service
+  lifecycle:
+    timeout-per-shutdown-phase: "60s"
+  main:
+    allow-circular-references: true
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
 
 swagger:
   controllerPackage: seat.controller
