Optimized memory resource configuration for most frequent services

--- a/deployment/kubernetes-manifests/k8s-with-jaeger-elasticsearch/ts-deployment-part2.yml
+++ b/deployment/kubernetes-manifests/k8s-with-jaeger-elasticsearch/ts-deployment-part2.yml
@@ -381,7 +381,7 @@ spec:
               memory: 160Mi
             limits:
               cpu: 200m
-              memory: 500Mi
+              memory: 2048Mi
           readinessProbe:
             tcpSocket:
               port: 15680
@@ -786,9 +786,9 @@ spec:
           ports:
             - containerPort: 18856
           resources:
-            requests:
-              cpu: 200m
-              memory: 500Mi
+            # requests:
+            #   cpu: 200m
+            #   memory: 500Mi
 #            limits:
 #              cpu: 200m
 #              memory: 500Mi
@@ -994,7 +994,7 @@ spec:
               memory: 160Mi
             limits:
               cpu: 200m
-              memory: 500Mi
+              memory: 1024Mi
           readinessProbe:
             tcpSocket:
               port: 17853
@@ -1044,7 +1044,7 @@ spec:
               memory: 160Mi
             limits:
               cpu: 200m
-              memory: 500Mi
+              memory: 2048Mi
           readinessProbe:
             tcpSocket:
               port: 12032
@@ -1094,7 +1094,7 @@ spec:
               memory: 160Mi
             limits:
               cpu: 200m
-              memory: 500Mi
+              memory: 2048Mi
           readinessProbe:
             tcpSocket:
               port: 12031
@@ -1444,7 +1444,7 @@ spec:
               memory: 160Mi
             limits:
               cpu: 200m
-              memory: 500Mi
+              memory: 2048Mi
           readinessProbe:
             tcpSocket:
               port: 11178
@@ -1494,7 +1494,7 @@ spec:
               memory: 160Mi
             limits:
               cpu: 200m
-              memory: 500Mi
+              memory: 2048Mi
           readinessProbe:
             tcpSocket:
               port: 18898
@@ -1544,7 +1544,7 @@ spec:
               memory: 160Mi
             limits:
               cpu: 200m
-              memory: 500Mi
+              memory: 2048Mi
           readinessProbe:
             tcpSocket:
               port: 11188
@@ -1644,7 +1644,7 @@ spec:
               memory: 160Mi
             limits:
               cpu: 200m
-              memory: 500Mi
+              memory: 2048Mi
           readinessProbe:
             tcpSocket:
               port: 12345
@@ -1744,7 +1744,7 @@ spec:
               memory: 160Mi
             limits:
               cpu: 200m
-              memory: 500Mi
+              memory: 2048Mi
           readinessProbe:
             tcpSocket:
               port: 15681
@@ -1946,7 +1946,7 @@ spec:
               memory: 160Mi
             limits:
               cpu: 200m
-              memory: 500Mi
+              memory: 2048Mi
           readinessProbe:
             tcpSocket:
               port: 12346
